## Copyright 2012 Mo McRoberts.
##
##  Licensed under the Apache License, Version 2.0 (the "License");
##  you may not use this file except in compliance with the License.
##  You may obtain a copy of the License at
##
##      http://www.apache.org/licenses/LICENSE-2.0
##
##  Unless required by applicable law or agreed to in writing, software
##  distributed under the License is distributed on an "AS IS" BASIS,
##  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
##  See the License for the specific language governing permissions and
##  limitations under the License.

AC_INIT([ux],[master])

AM_INIT_AUTOMAKE([foreign])
AM_MAINTAINER_MODE

dnl - UX_PROJECT([var],[group],[project])
dnl As AC_CONFIG_SUBDIRS, but looks for group/project and adds
dnl 'project' to $var
AC_DEFUN([UX_PROJECT],[
if test -d "$srcdir/[$2]/[$3]" ; then
   [$1]="$[$1] [$3]"
   AC_CONFIG_SUBDIRS([$2]/[$3])
fi
])

bin_subdirs=''
UX_PROJECT([bin_subdirs],[bin],[admin])
UX_PROJECT([bin_subdirs],[bin],[ar])
UX_PROJECT([bin_subdirs],[bin],[asa])
UX_PROJECT([bin_subdirs],[bin],[at])
UX_PROJECT([bin_subdirs],[bin],[awk])
UX_PROJECT([bin_subdirs],[bin],[basename])
UX_PROJECT([bin_subdirs],[bin],[batch])
UX_PROJECT([bin_subdirs],[bin],[bc])
UX_PROJECT([bin_subdirs],[bin],[c99])
UX_PROJECT([bin_subdirs],[bin],[cal])
UX_PROJECT([bin_subdirs],[bin],[cat])
UX_PROJECT([bin_subdirs],[bin],[cflow])
UX_PROJECT([bin_subdirs],[bin],[chgrp])
UX_PROJECT([bin_subdirs],[bin],[chmod])
UX_PROJECT([bin_subdirs],[bin],[chown])
UX_PROJECT([bin_subdirs],[bin],[cksum])
UX_PROJECT([bin_subdirs],[bin],[cmp])
UX_PROJECT([bin_subdirs],[bin],[comm])
UX_PROJECT([bin_subdirs],[bin],[compress])
UX_PROJECT([bin_subdirs],[bin],[cp])
UX_PROJECT([bin_subdirs],[bin],[crontab])
UX_PROJECT([bin_subdirs],[bin],[csplit])
UX_PROJECT([bin_subdirs],[bin],[ctags])
UX_PROJECT([bin_subdirs],[bin],[cut])
UX_PROJECT([bin_subdirs],[bin],[cxref])
UX_PROJECT([bin_subdirs],[bin],[date])
UX_PROJECT([bin_subdirs],[bin],[dd])
UX_PROJECT([bin_subdirs],[bin],[delta])
UX_PROJECT([bin_subdirs],[bin],[df])
UX_PROJECT([bin_subdirs],[bin],[diff])
UX_PROJECT([bin_subdirs],[bin],[dirname])
UX_PROJECT([bin_subdirs],[bin],[du])
UX_PROJECT([bin_subdirs],[bin],[echo])
UX_PROJECT([bin_subdirs],[bin],[ed])
UX_PROJECT([bin_subdirs],[bin],[env])
UX_PROJECT([bin_subdirs],[bin],[ex])
UX_PROJECT([bin_subdirs],[bin],[exec])
UX_PROJECT([bin_subdirs],[bin],[expand])
UX_PROJECT([bin_subdirs],[bin],[expr])
UX_PROJECT([bin_subdirs],[bin],[false])
UX_PROJECT([bin_subdirs],[bin],[fc])
UX_PROJECT([bin_subdirs],[bin],[file])
UX_PROJECT([bin_subdirs],[bin],[find])
UX_PROJECT([bin_subdirs],[bin],[fold])
UX_PROJECT([bin_subdirs],[bin],[fort77])
UX_PROJECT([bin_subdirs],[bin],[fuser])
UX_PROJECT([bin_subdirs],[bin],[gencat])
UX_PROJECT([bin_subdirs],[bin],[get])
UX_PROJECT([bin_subdirs],[bin],[getconf])
UX_PROJECT([bin_subdirs],[bin],[grep])
UX_PROJECT([bin_subdirs],[bin],[head])
UX_PROJECT([bin_subdirs],[bin],[iconv])
UX_PROJECT([bin_subdirs],[bin],[id])
UX_PROJECT([bin_subdirs],[bin],[ipcrm])
UX_PROJECT([bin_subdirs],[bin],[ipcs])
UX_PROJECT([bin_subdirs],[bin],[join])
UX_PROJECT([bin_subdirs],[bin],[kill])
UX_PROJECT([bin_subdirs],[bin],[lex])
UX_PROJECT([bin_subdirs],[bin],[link])
UX_PROJECT([bin_subdirs],[bin],[ln])
UX_PROJECT([bin_subdirs],[bin],[locale])
UX_PROJECT([bin_subdirs],[bin],[localedef])
UX_PROJECT([bin_subdirs],[bin],[logger])
UX_PROJECT([bin_subdirs],[bin],[logname])
UX_PROJECT([bin_subdirs],[bin],[lp])
UX_PROJECT([bin_subdirs],[bin],[ls])
UX_PROJECT([bin_subdirs],[bin],[m4])
UX_PROJECT([bin_subdirs],[bin],[mailx])
UX_PROJECT([bin_subdirs],[bin],[make])
UX_PROJECT([bin_subdirs],[bin],[man])
UX_PROJECT([bin_subdirs],[bin],[mesg])
UX_PROJECT([bin_subdirs],[bin],[mkdir])
UX_PROJECT([bin_subdirs],[bin],[mkfifo])
UX_PROJECT([bin_subdirs],[bin],[more])
UX_PROJECT([bin_subdirs],[bin],[mv])
UX_PROJECT([bin_subdirs],[bin],[newgrp])
UX_PROJECT([bin_subdirs],[bin],[nice])
UX_PROJECT([bin_subdirs],[bin],[nl])
UX_PROJECT([bin_subdirs],[bin],[nm])
UX_PROJECT([bin_subdirs],[bin],[nohup])
UX_PROJECT([bin_subdirs],[bin],[od])
UX_PROJECT([bin_subdirs],[bin],[paste])
UX_PROJECT([bin_subdirs],[bin],[patch])
UX_PROJECT([bin_subdirs],[bin],[pathchk])
UX_PROJECT([bin_subdirs],[bin],[pax])
UX_PROJECT([bin_subdirs],[bin],[pr])
UX_PROJECT([bin_subdirs],[bin],[printf])
UX_PROJECT([bin_subdirs],[bin],[prs])
UX_PROJECT([bin_subdirs],[bin],[ps])
UX_PROJECT([bin_subdirs],[bin],[pwd])
UX_PROJECT([bin_subdirs],[bin],[qalter])
UX_PROJECT([bin_subdirs],[bin],[qdel])
UX_PROJECT([bin_subdirs],[bin],[qhold])
UX_PROJECT([bin_subdirs],[bin],[qmove])
UX_PROJECT([bin_subdirs],[bin],[qmsg])
UX_PROJECT([bin_subdirs],[bin],[qrerun])
UX_PROJECT([bin_subdirs],[bin],[qrls])
UX_PROJECT([bin_subdirs],[bin],[qselect])
UX_PROJECT([bin_subdirs],[bin],[qsig])
UX_PROJECT([bin_subdirs],[bin],[qstat])
UX_PROJECT([bin_subdirs],[bin],[qsub])
UX_PROJECT([bin_subdirs],[bin],[renice])
UX_PROJECT([bin_subdirs],[bin],[rm])
UX_PROJECT([bin_subdirs],[bin],[rmdel])
UX_PROJECT([bin_subdirs],[bin],[rmdir])
UX_PROJECT([bin_subdirs],[bin],[sact])
UX_PROJECT([bin_subdirs],[bin],[sccs])
UX_PROJECT([bin_subdirs],[bin],[sed])
UX_PROJECT([bin_subdirs],[bin],[set])
UX_PROJECT([bin_subdirs],[bin],[sh])
UX_PROJECT([bin_subdirs],[bin],[shift])
UX_PROJECT([bin_subdirs],[bin],[sleep])
UX_PROJECT([bin_subdirs],[bin],[sort])
UX_PROJECT([bin_subdirs],[bin],[strings])
UX_PROJECT([bin_subdirs],[bin],[strip])
UX_PROJECT([bin_subdirs],[bin],[stty])
UX_PROJECT([bin_subdirs],[bin],[tabs])
UX_PROJECT([bin_subdirs],[bin],[tail])
UX_PROJECT([bin_subdirs],[bin],[talk])
UX_PROJECT([bin_subdirs],[bin],[tee])
UX_PROJECT([bin_subdirs],[bin],[test])
UX_PROJECT([bin_subdirs],[bin],[time])
UX_PROJECT([bin_subdirs],[bin],[touch])
UX_PROJECT([bin_subdirs],[bin],[tput])
UX_PROJECT([bin_subdirs],[bin],[tr])
UX_PROJECT([bin_subdirs],[bin],[true])
UX_PROJECT([bin_subdirs],[bin],[tsort])
UX_PROJECT([bin_subdirs],[bin],[tty])
UX_PROJECT([bin_subdirs],[bin],[uname])
UX_PROJECT([bin_subdirs],[bin],[uncompress])
UX_PROJECT([bin_subdirs],[bin],[unexpand])
UX_PROJECT([bin_subdirs],[bin],[unget])
UX_PROJECT([bin_subdirs],[bin],[uniq])
UX_PROJECT([bin_subdirs],[bin],[unlink])
UX_PROJECT([bin_subdirs],[bin],[uudecode])
UX_PROJECT([bin_subdirs],[bin],[uuencode])
UX_PROJECT([bin_subdirs],[bin],[uustat])
UX_PROJECT([bin_subdirs],[bin],[uux])
UX_PROJECT([bin_subdirs],[bin],[vi])
UX_PROJECT([bin_subdirs],[bin],[wait])
UX_PROJECT([bin_subdirs],[bin],[wc])
UX_PROJECT([bin_subdirs],[bin],[what])
UX_PROJECT([bin_subdirs],[bin],[who])
UX_PROJECT([bin_subdirs],[bin],[write])
UX_PROJECT([bin_subdirs],[bin],[xargs])
UX_PROJECT([bin_subdirs],[bin],[yacc])
UX_PROJECT([bin_subdirs],[bin],[zcat])
AC_SUBST([bin_subdirs])

AC_CONFIG_FILES([
Makefile
bin/Makefile
])

AC_OUTPUT
